[package]
name = "tree-sitter-sil"
description = "A tree-sitter grammar for SIL, as defined in UWaterloo's CS 442"
version = "0.1.0"
authors = ["Arnav Patri <arnavpatri1@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "sil"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/endolite/tree-sitter-sil"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*", "tree-sitter.json"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.7"
